v1.0.27: Added Java-related enhancements